--- a/RMarkdown/scatterplot.Rmd
+++ b/RMarkdown/scatterplot.Rmd
@@ -19,9 +19,12 @@ summary(cars)
 
 ## Scatter Plot
 
-The following is a scatter plot.
+The following is a scatter plot with the following settings:
+Separated Color by Manufacturer
+Opacity: 0.5
+Size by MPG
 
 ```{r pressure, echo=TRUE, warning=FALSE}
 ggplot(cars, aes(x=Weight, y=MPG, size=Weight, color=Manufacturer)) + 
-  geom_point(alpha = 0.7)
+  geom_point(alpha = 0.5)
 ```
